--- a/TeX/src/main_short.tex
+++ b/TeX/src/main_short.tex
@@ -65,35 +65,38 @@
     \razdel{Введение}
     SSA (Singular Spectrum Analysis)~\cite{ssa} является распространённым
     методом анализа и прогноза временных рядов.
-    Этот метод используется, в частности, для выделения сигнала, тренда и периодических компонент из временного ряда.
+    Этот метод используется, в частности, для выделения сигнала и выделения тренда и периодических компонент из временного ряда.
     Хотя в последнее время получили распространение методы машинного обучения (например, в~\cite{ezhov-ssa} рассматривается
     задача прогноза с предобработкой временного ряда методом SSA перед применением нейронных сетей для прогноза),
-    задача анализа недлинных временных рядов не теряет своей актуальности.
+    задача анализа одного недлинного временного ряда не теряет своей актуальности.
     Ряд методов рассматривает при этом конкретные модели для сигнала/тренда (например, в~\cite{Vestnik}
     рассматривается полиномиальная регрессия).
     Метод SSA не требует задания параметрической модели, поэтому он более универсальный.
-    Однако, при этом метод SSA хорошо работает и с моделью сигнала в виде суммы комплексных экспонент или
+    Однако, при этом метод SSA хорошо работает и с моделью в виде суммы комплексных экспонент или
     в виде суммы экспоненциально-модулированных гармоник в вещественном случае,
     что позволяет оценивать параметры в этих моделях.
 
     Метод SSA основан на сингулярном разложении особой матрицы, построенной по временному ряду; она называется траекторной.
     Обобщение метода SSA на случай многомерных сигналов называется MSSA~\cite{mssa}.
-    Для оценки параметров временного ряда в параметрической модели методов SSA и MSSA используется метод ESPRIT~\cite{ESPRIT}, который также основан на
+    Для оценки параметров временного ряда в параметрической модели методов SSA и MSSA используется метод ESPRIT
+    (Estimation of signal parameters via rotational invariance techniques)~\cite{ESPRIT}, который также основан на
     сингулярном разложении траекторной матрицы и относится к классу методов, основанных на подпространстве сигнала.
-
-    В работе~\cite{papy-esprit} предлагается модификация метода ESPRIT, основанная тензорном сингулярном разложении траекторного тензора, и демонстрируется преимущество такой модификации при оценке параметров, в частности, частот. При этом для случая многомерного временного ряда особой структуры преимущество наиболее очевидно.
+    
+    В работе~\cite{papy-esprit} предлагается модификация метода ESPRIT, основанная на переходе от траекторной матрицы и
+    матричного сингулярного разложения к траекторному тензору и тензорному сингулярному разложению, и
+    демонстрируется преимущество такой модификации при оценке параметров, в частности, частот. При этом для случая многомерного временного ряда особой структуры преимущество наиболее очевидно.
     В данной работе мы рассматриваем аналогичную тензорную модификацию метода MSSA
-    (HO-MSSA, где HO -- сокращение от high order) для выделения сигналов
+    (HO-MSSA, где HO --- сокращение от high order) для выделения сигналов
     из временных рядов.
     Целью работы является сравнение метода MSSA с его тензорной модификацией на временных рядах,
     аналогичных тем, что были рассмотрены в~\cite{papy-esprit}.
 
 
-    В разделе~2 описана модель рассматриваемых сигналов.
-    В разделе~3 определены траекторная матрица и траекторный тензор, а также дано определение ранга сигнала.
+    В разделе~2 опишем модель рассматриваемых сигналов.
+    В разделе~3 определим траекторную матрицу и траекторный тензор, а также дадим определение ранга сигнала.
     В этом разделе приведено утверждение о соотношении между матричным и тензорным рангами сигнала.
-    В разделе~4 коротко описан метод MSSA и его тензорная модификация HO-MSSA для задачи выделения сигнала.
-    Описание во всех разделах дано в более общей комплексной форме, хотя применять метод мы будем в вещественном случае.
+    В разделе~4 коротко опишем метод MSSA и его тензорную модификацию HO-MSSA для задачи выделения сигнала.
+    Описание во всех разделах будет дано в более общей комплексной форме, хотя применять метод мы будем в вещественном случае.
     В разделе~5 описаны результаты численных сравнений.
 
     \razdel{Модель сигнала} \label{sec:model}
@@ -149,8 +152,8 @@
     \Definition~\emph{Траекторной матрицей одномерного временного ряда $(x_0, x_1, \ldots, x_{N-1})$ с длиной окна $L$}
     называется матрица $\mathbf{H}$, полученная применением оператора вложения с длиной окна $L$ к данному временному ряду.
     \Definition~Ряд $(x_0, x_1, \ldots, x_{N-1})$ называется \emph{рядом конечного ранга $d$} ($d<N/2$), если для любой длины
-    окна $L < N$ такой, что $\min(L, K) \geqslant d$, траекторная матрица этого ряда, построенная по данной
-    длине окна, имеет ранг $d$.
+    окна $L < N$ такой, что $\min(L, K) \geqslant d$, траекторная матрица этого ряда, построенная по
+    данной длине окна, имеет ранг $d$.
     \Example~Временной ряд вида~\eqref{eq:1d-complex-model} имеет ранг, равный количеству уникальных пар
     $(\alpha_j, \omega_j)$ по всем $j$~\cite{Stepanov}.
 
@@ -170,7 +173,7 @@
     \end{equation}
     \Remark[n]~Ранг многомерного ряда определяется аналогично рангу одномерного ряда с заменой траекторной матрицы
     одномерного ряда на траекторную матрицу многомерного ряда.
-    \Example~Многомерный временной ряд вида~\eqref{eq:nd-complex-model-general} имеет ранг, равный количеству уникальных
+    \Example~Многомерный временной ряд вида~\eqref{eq:nd-complex-model-general} имеет ранг равный количеству уникальных
     пар $(\alpha_j^{(p)}, \omega_j^{(p)})$ по всем $j$ и $p$~\cite{Stepanov}.
     \Example~Так как $\cos(2 \pi \omega n + \varphi_n) =
     \left( e^{2\pi \iu \omega n + \varphi_n} + e^{-2\pi \iu \omega n - \varphi_n} \right) / 2$,
@@ -196,7 +199,7 @@
     $\Omega$~-- множество уникальных пар $(\omega_j, \alpha_j)$ по всем $j$.
 
     \podrazdel{Тензорные ранги}
-
+    
     \Definition~\emph{Векторами тензора $\mathcal{A} \in \mathbb{C}^{I_1\times I_2 \times \ldots \times I_M}$ по
     измерению $n$} называются векторы вида
     $\left(\left( a_{i_1 i_2 \ldots i_{n-1} k i_{n+1} \ldots i_M} \right)_{k=1}^{I_n}\right)^\mathrm{T}$,
@@ -217,7 +220,7 @@
 
     \Definition~\emph{Траекторным тензором многомерного временного ряда}
     \[
-        \left( x_0^{(p)}, x_1^{(p)}, \ldots, x_{N-1}^{(P)} \right), \quad p=1,2,\ldots, P,
+        \left( x_0^{(p)}, x_1^{(p)}, \ldots, x_{N-1}^{(P)} \right), \quad p=1,2,\ldots, P
     \]
     \emph{с длиной окна $L$} называется тензор $\mathcal{H}\in\mathbb{C}^{L\times K \times P}$ ($K = N-L+1$),
     элемент $h_{lkp}$ которого равен $x_{l+k-2}^{(p)}$.
@@ -234,7 +237,7 @@
     \Statement{(Об $n$-рангах траекторного тензора многомерного ряда конечного ранга)}
     Пусть временной ряд
     \[
-        \left( x_0^{(p)}, x_1^{(p)}, \ldots, x_{N-1}^{(p)} \right), \quad p=1, 2,\ldots, P,
+        \left( x_0^{(p)}, x_1^{(p)}, \ldots, x_{N-1}^{(p)} \right), \quad p=1, 2,\ldots, P
     \]
     имеет ранг $d$ в терминах MSSA, тогда для траекторного тензора $\mathcal{H}$, построенного по любой длине окна $L<N$
     такой, что ${\min(L, K) \geqslant d}$, выполняется $\rank_1(\mathcal{H})=\rank_2(\mathcal{H})=d$, а $3$-ранг этого тензора
@@ -271,7 +274,7 @@
     матрицы $\mathbf{U}=\left[ U_1 : U_2 : \ldots : U_d \right] \in \mathbb{C}^{L \times d}$ и
     $\mathbf{V}=\left[ V_1 : V_2 : \ldots : V_d \right] \in \mathbb{C}^{K \times d}$ унитарные.
 
-    Если на данный сигнал воздействует шум, то траекторная матрица будет матрицей полного ранга и тогда рассматривается наилучшее приближение траекторной матрицы матрицей заданного ранга $r < d$:
+    Если на данный сигнал воздействует шум, то траекторная матрица будет матрицей полного ранга и тогда рассматривается наилучшее приближение траекторной матрицы матрицей заданного ранга $r \leqslant d$:
     \begin{equation}
         \widehat{\mathbf{H}}=
         \sum_{j=1}^{r} \sigma_j U_j V_j^{\mathrm{H}}.
@@ -285,7 +288,7 @@
     где ${M_n = \left\{(i, j):\: i+j-2=n,\, 1 \leqslant i \leqslant L,\,  1 \leqslant j \leqslant K\right\}}$, а
     $\widehat{h}_{ij}^{(p)}$~-- элементы матрицы $\widehat{\mathbf{H}}_p$.
     Результат такого усреднения $\widetilde{s}_n^{(p)}$ считается оценкой сигнала $s_n^{(p)}$.
-
+    
     \podrazdel{High-Order MSSA}
     В работе~\cite{papy-esprit} была предложена тензорная модификация алгоритма ESPRIT для оценки параметров
     многомерных сигналов.
@@ -321,7 +324,7 @@
     HO-MSSA.
     Точность выделения сигнала сравнивалась с помощью RMSE оценки сигнала по 1000
     реализациям шума.
-    Сравнение проводилось на одних и тех же реализациях шума, все различия значимы при уровне значимости $0.05$.
+    Методы сравнивались на одних и тех же реализациях шума, все различия значимы при уровне значимости $\alpha = 0.05$.
 
     \podrazdel{Сигнал с одинаковыми фазами}
     Пусть временной ряд имеет вид
@@ -331,7 +334,8 @@
         \end{split}\label{eq:nd-comparison}
     \end{equation}
     где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
-    со стандартным отклонением $\sigma = 0.02$.
+    с нулевым средним и стандартным отклонением $\sigma = 0.02$, $c_k^{(p)}$~-- независимые нормальные случайные
+    величины с нулевым средним и стандартным отклонением $1$.
 
     Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длин окна
     (для MSSA $L = 22$, для HO-MSSA $L=20$).
@@ -352,7 +356,8 @@
         \end{split}\label{eq:nd-comparison-lin-phase}
     \end{equation}
     где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
-    со стандартным отклонением $\sigma = 0.02$.
+    со стандартным отклонением $\sigma = 0.02$, $c_k^{(p)}$~-- независимые нормальные случайные
+    величины с нулевым средним и стандартным отклонением $1$.
 
     Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длин окна
     (для обоих методов оптимальное $L = 21$).
@@ -379,7 +384,7 @@
     уменьшилось по сравнению со случаем равных фаз.
 
     \razdel{Заключение}
-    В работе было показано, что тензорный вариант HO-MSSA для выделения многомерного сигнала дал точность выше, чем обычный MSSA. Соответственно, в следующих исследованиях имеет смысл развивать теорию метода HO-MSSA для увеличения точности оценивания сигнала и его компонент.
+    В результате работы было показано, что тензорный вариант HO-MSSA для выделения многомерного сигнала дал точность выше, чем обычный MSSA. Соответственно, в следующих исследованиях имеет смысл развивать теорию метода HO-MSSA для увеличения точности оценивания сигнала и его компонент.
 
 
     \begin{thebibliography}{40}
