--- a/TeX/src/main_short.tex
+++ b/TeX/src/main_short.tex
@@ -137,6 +137,7 @@
 
     \podrazdel{Ряды конечного ранга}
     Введём несколько вспомогательных определений.
+
     \Definition~\emph{Оператором вложения с длиной окна $L$} будем называть отображение, преобразующее временной ряд (возможно, комплексный)
     $\left(x_0, x_1, \ldots, x_{N-1}\right)$ в ганкелеву матрицу размерности $L\times K$ ($K = N-L+1$) следующим образом:
     \begin{equation}
@@ -149,11 +150,15 @@
             x_{L-1} & \ldots  & \ldots  & x_{N-2} & x_{N-1} \\
         \end{pmatrix}.\label{eq:hankelization-operator}
     \end{equation}
+
     \Definition~\emph{Траекторной матрицей одномерного временного ряда $(x_0, x_1, \ldots, x_{N-1})$ с длиной окна $L$}
     называется матрица $\mathbf{H}$, полученная применением оператора вложения с длиной окна $L$ к данному временному ряду.
+
     \Definition~Ряд $(x_0, x_1, \ldots, x_{N-1})$ называется \emph{рядом конечного ранга $d$} ($d<N/2$), если для любой длины
     окна $L < N$ такой, что $\min(L, K) \geqslant d$, траекторная матрица этого ряда, построенная по
-    данной длине окна, имеет ранг $d$.
+    \newpage
+    \noindent данной длине окна, имеет ранг $d$.
+
     \Example~Временной ряд вида~\eqref{eq:1d-complex-model} имеет ранг, равный количеству уникальных пар
     $(\alpha_j, \omega_j)$ по всем $j$~\cite{Stepanov}.
 
@@ -173,8 +178,10 @@
     \end{equation}
     \Remark[n]~Ранг многомерного ряда определяется аналогично рангу одномерного ряда с заменой траекторной матрицы
     одномерного ряда на траекторную матрицу многомерного ряда.
+
     \Example~Многомерный временной ряд вида~\eqref{eq:nd-complex-model-general} имеет ранг равный количеству уникальных
     пар $(\alpha_j^{(p)}, \omega_j^{(p)})$ по всем $j$ и $p$~\cite{Stepanov}.
+
     \Example~Так как $\cos(2 \pi \omega n + \varphi_n) =
     \left( e^{2\pi \iu \omega n + \varphi_n} + e^{-2\pi \iu \omega n - \varphi_n} \right) / 2$,
     то ранг ряда
@@ -182,7 +189,8 @@
         s_n = A e^{\alpha n} \cos(2\pi \omega n + \varphi)\label{eq:exp-modul-cos}
     \end{equation}
     с $A\ne 0$ равен $2$, если $\omega \in (0, 1/2)$ и равен $1$, если $\omega \in \{0, 1/2\}$.
-    \Example~Пусть ряд представляется в виде суммы $M$ экспоненциально-модулированных гармоник
+
+    \Example~Пусть ряд представляется в виде суммы $M$ \\ экспоненциально-модулированных гармоник
     \begin{equation}
         s_n = \sum_{j=1}^{M} A_j e^{\alpha_j n} \cos(2\pi \omega_j n + \varphi_j),\label{eq:exp-modul-cos-sum}
     \end{equation}
@@ -214,6 +222,7 @@
 %    измерению $n$} называются векторы, получаемые варьированием индекса с номером $n$ при фиксированных остальных.
 %    \Definition~\emph{$n$-рангом} тензора $\mathcal{A}$ называют ранг развёртки этого тензора по измерению $n$.
 %    Обозначение: $\rank_n(\mathcal{A})$.
+
     \Definition~\emph{$n$-Рангом} тензора $\mathcal{A}$ называют размерность линейной оболочки, построенной
     по векторам этого тензора по измерению $n$.
     Обозначение: $\rank_n(\mathcal{A})$.
@@ -234,6 +243,7 @@
 
     Основываясь на виде траекторного тензора многомерного ряда, можно доказать следующее утверждение,
     связывающее понятие многомерного ряда конечного ранга и понятие $n$-рангов траекторного тензора этого ряда.
+
     \Statement{(Об $n$-рангах траекторного тензора многомерного ряда конечного ранга)}
     Пусть временной ряд
     \[
@@ -292,7 +302,7 @@
     \podrazdel{High-Order MSSA}
     В работе~\cite{papy-esprit} была предложена тензорная модификация алгоритма ESPRIT для оценки параметров
     многомерных сигналов.
-    В этом разделе мы приведём расширение этого алгоритма для решения задачи выделения сигнала из многомерных рядов.
+    В этом разделе мы приведём расширение этого алгоритма для решения задачи выделения сигнала из многомерных \newpage \noindent рядов.
 
     Рассматриваем многомерный временной ряд с сигналом вида~\eqref{eq:nd-complex-model}.
     На первом шаге выбирается длина окна $1<L<N$ и по данному ряду строится
@@ -333,9 +343,10 @@
             x_n^{(p)} = c_1^{(p)} e^{-0.01 n} \cos(2\pi 0.2 n) + c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n) + \varepsilon_n^{(p)},
         \end{split}\label{eq:nd-comparison}
     \end{equation}
-    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
-    с нулевым средним и стандартным отклонением $\sigma = 0.02$, $c_k^{(p)}$~-- независимые нормальные случайные
-    величины с нулевым средним и стандартным отклонением $1$.
+    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $c_k^{(p)}$~-- независимые нормальные случайные
+    величины с нулевым средним и стандартным
+    \newpage \vspace*{0.3cm} \noindent отклонением $1$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных
+    величин с нулевым средним и стандартным отклонением $\sigma = 0.02$
 
     Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длин окна
     (для MSSA $L = 22$, для HO-MSSA $L=20$).
@@ -355,9 +366,9 @@
             + &c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n + p \pi / 9) + \varepsilon_n^{(p)},
         \end{split}\label{eq:nd-comparison-lin-phase}
     \end{equation}
-    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
-    со стандартным отклонением $\sigma = 0.02$, $c_k^{(p)}$~-- независимые нормальные случайные
-    величины с нулевым средним и стандартным отклонением $1$.
+    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $c_k^{(p)}$~-- независимые нормальные случайные
+    величины с нулевым средним и стандартным отклонением $1$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
+    с нулевым средним и стандартным отклонением $\sigma = 0.02$
 
     Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длин окна
     (для обоих методов оптимальное $L = 21$).
@@ -397,6 +408,6 @@
          \bibitem{papy-esprit}Papy~J.\:M., De~Lathauwer~L., Van~Huffel~S. Exponential data fitting using multilinear algebra: the single-channel and multi-channel case // Numerical Linear Algebra with Applications. 2005. Vol.~12(8). P.~809--826.
        \bibitem{NMR} Van~Huffel~S., Chen~H., Decanniere~C., Van~Hecke~P. Algorithm for Time-Domain NMR Data Fitting Based on Total Least Squares // Journal of Magnetic Resonance. 1994. Vol.~110(2). P.~228--237.
         \bibitem{Stepanov} Степанов~Д.\: В., Голяндина~Н.\: Э. Варианты метода <<Гусеница>>-SSA для прогноза многомерных временных рядов // Труды IV Международной конференции <<Идентификация систем и задачи управления>> SICPRO’05. 2005. С.~1831--1848.
-        \bibitem{hosvd} De~Lathauwer~L., De~Moor~B., Vandewalle~J. A Multilinear Singular Value Decomposition // SIAM Journal on Matrix Analysis and Applications. 2000. Vol.~21(4). P.~1253-1278.
+        \bibitem{hosvd} De~Lathauwer~L., De~Moor~B., Vandewalle~J. A Multilinear Singular Value Decomposition // SIAM Journal on Matrix Analysis and Applications. 2000. Vol.~21(4). P.~1253--1278.
     \end{thebibliography}
 \end{document} 
