--- a/TeX/src/main_short.tex
+++ b/TeX/src/main_short.tex
@@ -395,7 +395,8 @@
     уменьшилось по сравнению со случаем равных фаз.
 
     \razdel{«аключение}
-    ¬ результате работы было показано, что тензорный вариант HO-MSSA дл€ выделени€ многомерного сигнала дал точность выше, чем обычный MSSA. —оответственно, в следующих исследовани€х имеет смысл развивать теорию метода HO-MSSA дл€ увеличени€ точности оценивани€ сигнала и его компонент.
+    ¬ результате работы было показано, что тензорный вариант HO-MSSA дл€ выделени€ многомерного сигнала дал точность выше, чем обычный MSSA.
+    —оответственно, в следующих исследовани€х имеет смысл развивать теорию метода HO-MSSA дл€ увеличени€ точности оценивани€ сигнала и его компонент.
 
 
     \begin{thebibliography}{40}
